<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/bg_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/red">

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/round_shape"
            android:backgroundTint="@color/white">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:endIconMode="clear_text"
                app:boxBackgroundColor="@color/material_on_primary_disabled"
                android:textColorHint="@color/red"
                app:hintTextColor="@color/red"
                app:boxStrokeColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:endIconMode="clear_text"
                app:boxBackgroundColor="@color/material_on_primary_disabled"
                android:textColorHint="@color/red"
                app:hintTextColor="@color/red"
                app:boxStrokeColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:endIconMode="password_toggle"
                app:boxBackgroundColor="@color/material_on_primary_disabled"
                android:textColorHint="@color/red"
                app:hintTextColor="@color/red"
                app:boxStrokeColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/red"
                android:text="@string/save"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/red"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Register"
        app:titleTextColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>